# python-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  setup.py
.vscode.example/: extensions.json  launch.json  settings.json
src/python_template/: __init__.py  config.py  debug.py  logging.py
src/python_template/api/: app.py  asgi.py  dependencies.py  exceptions.py  lifespan.py
src/python_template/api/routes/: __init__.py  health.py  items.py
src/python_template/api/schemas/: __init__.py  common.py  items.py
src/python_template/models/: __init__.py  items.py
src/python_template/repositories/: __init__.py  base.py  items.py  memory.py
src/python_template/services/: __init__.py  base.py  items.py
tests/: conftest.py  test_health.py  test_items.py
